force-app/main/default/objects/Sales_Rep_Profile__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indicates whether the user record associated with the sales profile is active</description>
    <label>Active?</label>
    <type>Checkbox</type>
</CustomField>