force-app/main/default/objects/Sales_Rep_Profile__c/fields/Annual_Opportunity_Quota__c.field-meta.xml
<CustomField>
    <fullName>Annual_Opportunity_Quota__c</fullName>
    <formula>IF(X12_Month_Rolling_Opportunity_Close_Rate__c != 0, 
 Annual_Win_Quota__c /  X12_Month_Rolling_Opportunity_Close_Rate__c ,
 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Annual Opportunity Quota</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>