force-app/main/default/objects/Sales_Rep_Profile__c/fields/Annual_Quota_Amount__c.field-meta.xml
<CustomField>
    <fullName>Annual_Quota_Amount__c</fullName>
    <description>Total quota for a year (sum of quotas for every month)</description>
    <formula>Month_1_Quota_Amount__c+Month_2_Quota_Amount__c+Month_3_Quota_Amount__c+Month_4_Quota_Amount__c+Month_5_Quota_Amount__c+Month_6_Quota_Amount__c+Month_7_Quota_Amount__c+Month_8_Quota_Amount__c+Month_9_Quota_Amount__c+Month_10_Quota_Amount__c+Month_11_Quota_Amount__c+Month_12_Quota_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Annual Quota Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>