force-app/main/default/objects/Sales_Rep_Profile__c/fields/Annual_Win_Quota__c.field-meta.xml
<CustomField>
    <fullName>Annual_Win_Quota__c</fullName>
    <formula>IF(X12_Month_Average_Selling_Price__c !=0,
 Annual_Quota_Amount__c /  X12_Month_Average_Selling_Price__c,
 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Annual Win Quota</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>