force-app/main/default/objects/Sales_Rep_Profile__c/fields/Average_Deal_Size__c.field-meta.xml
<CustomField>
    <fullName>Average_Deal_Size__c</fullName>
    <description>Sum of Amount  in opp created in last 12 months/ Count of opp created in last 12 months</description>
    <label>Average Deal Size</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>