force-app/main/default/objects/Sales_Rep_Profile__c/fields/Average_Sales_Price__c.field-meta.xml
<CustomField>
    <fullName>Average_Sales_Price__c</fullName>
    <formula>IF(YTD_Opportunities_won__c !=0,
 YTD_Revenue__c / YTD_Opportunities_won__c,
 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Average Sales Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>