force-app/main/default/objects/Sales_Rep_Profile__c/fields/Avg_ann_Rev_Perf_of_Tenured_Rep__c.field-meta.xml
<CustomField>
    <fullName>Avg_ann_Rev_Perf_of_Tenured_Rep__c</fullName>
    <description>Average Annual Revenue Performance for a Tenured Rep since inception
Formula = (Sum of monthly revenues / no. of months)*12
Limit upto 5 year</description>
    <label>Avg ann Rev Perf of Tenured Rep incep</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>