force-app/main/default/objects/Sales_Rep_Profile__c/fields/Avg_ann_Rev_Perf_of_Tenured_Rep_Role__c.field-meta.xml
<CustomField>
    <fullName>Avg_ann_Rev_Perf_of_Tenured_Rep_Role__c</fullName>
    <description>Average Annual Revenue Performance for a Tenured Rep since inception (in this role)
Formula = (Sum of monthly revenues / no. of months)*12
Reset on roles chage (i.e. 1 month of rev/ 1mo)
Limit upto 5 year</description>
    <label>Avg ann Rev Perf of Tenur Rep(Role)incep</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>