force-app/main/default/objects/Sales_Rep_Profile__c/fields/Avg_Annual_Rev_Perf_For_Tenured_Role__c.field-meta.xml
<CustomField>
    <fullName>Avg_Annual_Rev_Perf_For_Tenured_Role__c</fullName>
    <description>Sum of last fiscal year revenue for tenured reps (in this role) / number of tenured reps (in this role)</description>
    <label>Avg Annual Rev Perf For Tenured(Role)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>