force-app/main/default/objects/Sales_Rep_Profile__c/fields/Close_rate_monthly_opp_amount__c.field-meta.xml
<CustomField>
    <fullName>Close_rate_monthly_opp_amount__c</fullName>
    <description>This contains the amount of the opp whose closedate is change</description>
    <label>Close rate monthly opp amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>