force-app/main/default/objects/Sales_Rep_Profile__c/fields/Close_rate_Quarterly_opp_count__c.field-meta.xml
<CustomField>
    <fullName>Close_rate_Quarterly_opp_count__c</fullName>
    <description>This filed contains the count of opp moved from the current quarter</description>
    <label>Close rate Quarterly opp count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>