force-app/main/default/objects/Sales_Rep_Profile__c/fields/Close_rate_YTD_opp_amount__c.field-meta.xml
<CustomField>
    <fullName>Close_rate_YTD_opp_amount__c</fullName>
    <description>This field stored the sum of amounts whose close date is changed</description>
    <label>Close rate YTD opp amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>