force-app/main/default/objects/Sales_Rep_Profile__c/fields/Current_Active_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>Current_Active_Opportunities__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Total number of opportunities assigned to a sales representative that are in the active stage</description>
    <label>Current Active Opportunities</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>