force-app/main/default/objects/Sales_Rep_Profile__c/fields/FMCustom_Metric_10__c.field-meta.xml
<CustomField>
    <fullName>FMCustom_Metric_10__c</fullName>
    <description>Stores the Custom Metric Value from other objects.</description>
    <label>FMCustom_Metric_10</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>