force-app/main/default/objects/Sales_Rep_Profile__c/fields/Goal_12_Month_Lead_Added__c.field-meta.xml
<CustomField>
    <fullName>Goal_12_Month_Lead_Added__c</fullName>
    <label>Goal 12 Month Lead Added</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>