force-app/main/default/objects/Sales_Rep_Profile__c/fields/Goal_12m_Lead_To_Opp_Conv_Rate__c.field-meta.xml
<CustomField>
    <fullName>Goal_12m_Lead_To_Opp_Conv_Rate__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Goal for the lead to opportunity conversion rate</description>
    <label>Goal 12m Lead To Opp Conv Rate</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>