force-app/main/default/objects/Sales_Rep_Profile__c/fields/Goal_12m_length_of_sales_cycle__c.field-meta.xml
<CustomField>
    <fullName>Goal_12m_length_of_sales_cycle__c</fullName>
    <defaultValue>0</defaultValue>
    <description>goal for the length of sales cycle</description>
    <label>Goal 12m length of sales cycle</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>