force-app/main/default/objects/Sales_Rep_Profile__c/fields/Goal_12m_rolling_amt_close_rate__c.field-meta.xml
<CustomField>
    <fullName>Goal_12m_rolling_amt_close_rate__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Goal 12m rolling amt close rate</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>