force-app/main/default/objects/Sales_Rep_Profile__c/fields/Goal_12m_rolling_close_rate__c.field-meta.xml
<CustomField>
    <fullName>Goal_12m_rolling_close_rate__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Goal for the 12 month rolling close rate</description>
    <label>Goal 12m rolling close rate</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>