force-app/main/default/objects/Sales_Rep_Profile__c/fields/Goal_12Month_Rolling_Opptys_Added_amt__c.field-meta.xml
<CustomField>
    <fullName>Goal_12Month_Rolling_Opptys_Added_amt__c</fullName>
    <formula>IF(Goal_12m_rolling_amt_close_rate__c &gt; 0, X12_Month_Rolling_Quota__c/Goal_12m_rolling_amt_close_rate__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Goal 12Month Rolling Opptys Added $ amt</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>