force-app/main/default/objects/Sales_Rep_Profile__c/fields/Goal_of_annual_leads_to_achieve_quota__c.field-meta.xml
<CustomField>
    <fullName>Goal_of_annual_leads_to_achieve_quota__c</fullName>
    <formula>Goal_of_leads_for_1_win__c * Goal_of_wins_to_achieve_annual_quota__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Goal # of annual leads to achieve quota</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>