force-app/main/default/objects/Sales_Rep_Profile__c/fields/Goal_of_annual_opptys_added_to_funnel__c.field-meta.xml
<CustomField>
    <fullName>Goal_of_annual_opptys_added_to_funnel__c</fullName>
    <formula>if(Goal_12m_rolling_close_rate__c &gt; 0, Goal_of_wins_to_achieve_annual_quota__c / Goal_12m_rolling_close_rate__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Goal # of annual opptys added to funnel</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>