force-app/main/default/objects/Sales_Rep_Profile__c/fields/Goal_of_daily_leads_to_achieve_quota__c.field-meta.xml
<CustomField>
    <fullName>Goal_of_daily_leads_to_achieve_quota__c</fullName>
    <formula>Goal_of_monthly_leads_to_achieve_quota__c / 22</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Goal # of daily leads to achieve quota</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>