force-app/main/default/objects/Sales_Rep_Profile__c/fields/Goal_of_leads_for_1_qualified_oppty__c.field-meta.xml
<CustomField>
    <fullName>Goal_of_leads_for_1_qualified_oppty__c</fullName>
    <formula>IF(Goal_12m_Lead_To_Opp_Conv_Rate__c !=0,
 1/Goal_12m_Lead_To_Opp_Conv_Rate__c,
 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Goal # of leads for 1 qualified oppty</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>