force-app/main/default/objects/Sales_Rep_Profile__c/fields/Goal_of_leads_for_1_win__c.field-meta.xml
<CustomField>
    <fullName>Goal_of_leads_for_1_win__c</fullName>
    <formula>IF(Goal_12m_rolling_close_rate__c &gt; 0, Goal_of_leads_for_1_qualified_oppty__c / Goal_12m_rolling_close_rate__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Goal # of leads for 1 win</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>