force-app/main/default/objects/Sales_Rep_Profile__c/fields/Goal_of_monthly_meetings__c.field-meta.xml
<CustomField>
    <fullName>Goal_of_monthly_meetings__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Goal # of monthly meetings</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>