force-app/main/default/objects/Sales_Rep_Profile__c/fields/Goal_of_quarterly_meetings__c.field-meta.xml
<CustomField>
    <fullName>Goal_of_quarterly_meetings__c</fullName>
    <formula>Goal_of_monthly_meetings__c * 4</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Goal of quarterly meetings</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>