force-app/main/default/objects/Sales_Rep_Profile__c/fields/Goal_of_wins_to_achieve_quartly_quota__c.field-meta.xml
<CustomField>
    <fullName>Goal_of_wins_to_achieve_quartly_quota__c</fullName>
    <formula>IF(Goal_12m_Avg_Selling_Price__c &gt;0,
 Annual_Quota_Amount__c/(Goal_12m_Avg_Selling_Price__c * 4),
 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Goal # of wins to achieve quartly quota</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>