force-app/main/default/objects/Sales_Rep_Profile__c/fields/Goal_of_wins_to_achieve_YTD_quota__c.field-meta.xml
<CustomField>
    <fullName>Goal_of_wins_to_achieve_YTD_quota__c</fullName>
    <description>Goal for the month * number of fiscal months = YTD goal.</description>
    <formula>Goal_of_wins_to_achieve_monthly_quota__c * Current_Fiscal_Months__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Goal # of wins to achieve YTD quota</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>