force-app/main/default/objects/Sales_Rep_Profile__c/fields/Goal_of_YTD_meetings__c.field-meta.xml
<CustomField>
    <fullName>Goal_of_YTD_meetings__c</fullName>
    <description>Goal for YTD meetings = Monthly meetings * Current fiscal months.</description>
    <formula>Goal_of_monthly_meetings__c * Current_Fiscal_Months__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Goal # of YTD meetings</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>