force-app/main/default/objects/Sales_Rep_Profile__c/fields/Goal_YTD_Opportunities_Added__c.field-meta.xml
<CustomField>
    <fullName>Goal_YTD_Opportunities_Added__c</fullName>
    <formula>Goal_of_monthly_opptys_added_to_funnel__c * Current_Fiscal_Months__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Goal YTD Opportunities Added</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>