force-app/main/default/objects/Sales_Rep_Profile__c/fields/Interim_Manager__c.field-meta.xml
<CustomField>
    <fullName>Interim_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Stores the name of the Intermin manager for certification update.</description>
    <label>Interim Manager</label>
    <referenceTo>Sales_Rep_Profile__c</referenceTo>
    <relationshipLabel>Sales Rep Profiles (Interim Manager)</relationshipLabel>
    <relationshipName>Sales_Rep_Profiles1</relationshipName>
    <type>Lookup</type>
</CustomField>