force-app/main/default/objects/Sales_Rep_Profile__c/fields/Lead_to_Opportunity_Conversion_Rate__c.field-meta.xml
<CustomField>
    <fullName>Lead_to_Opportunity_Conversion_Rate__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Lead to Opportunity Conversion Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>