force-app/main/default/objects/Sales_Rep_Profile__c/fields/Level_picklist_1__c.field-meta.xml
<CustomField>
    <fullName>Level_picklist_1__c</fullName>
    <description>first company level picklist</description>
    <label>Level picklist 1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Level_Picklist_1</valueSetName>
    </valueSet>
</CustomField>