force-app/main/default/objects/Sales_Rep_Profile__c/fields/Level_picklist_2__c.field-meta.xml
<CustomField>
    <fullName>Level_picklist_2__c</fullName>
    <description>second company level picklist</description>
    <label>Level picklist 2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Level_Picklist_2</valueSetName>
    </valueSet>
</CustomField>