force-app/main/default/objects/Sales_Rep_Profile__c/fields/Manger_Id__c.field-meta.xml
<CustomField>
    <fullName>Manger_Id__c</fullName>
    <formula>Sales_Manager__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Manger Id</label>
    <type>Text</type>
</CustomField>