force-app/main/default/objects/Sales_Rep_Profile__c/fields/Manger_Name__c.field-meta.xml
<CustomField>
    <fullName>Manger_Name__c</fullName>
    <formula>Sales_Manager__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Manger Name</label>
    <type>Text</type>
</CustomField>