force-app/main/default/objects/Sales_Rep_Profile__c/fields/Monthly_Average_Win_size__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Average_Win_size__c</fullName>
    <description>Monthly Average $ Win size (Currency) =
Monthly_Quota_Revenue__c  /   Monthly_opp_won__c</description>
    <formula>IF(Monthly_opp_won__c &gt; 0, Monthly_Quota_Revenue__c  /   Monthly_opp_won__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Monthly Average $ Win size</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>