force-app/main/default/objects/Sales_Rep_Profile__c/fields/Monthly_Average_Win_size_percentage__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Average_Win_size_percentage__c</fullName>
    <formula>IF(Goal_12m_Avg_Selling_Price__c &gt; 0, Monthly_Average_Win_size__c / Goal_12m_Avg_Selling_Price__c , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Monthly Average $ Win size percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>