force-app/main/default/objects/Sales_Rep_Profile__c/fields/Monthly_close_rate_percentage__c.field-meta.xml
<CustomField>
    <fullName>Monthly_close_rate_percentage__c</fullName>
    <description>Stores the monthly close rate in percentage form against the goal</description>
    <formula>IF(Goal_12m_rolling_amt_close_rate__c &gt; 0, Monthly_Close_Rate__c / Goal_12m_rolling_amt_close_rate__c , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Monthly $ close rate percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>