force-app/main/default/objects/Sales_Rep_Profile__c/fields/Monthly_funnel_opportunities__c.field-meta.xml
<CustomField>
    <fullName>Monthly_funnel_opportunities__c</fullName>
    <description>This field stores the count of qualified opp at the end of the month + the count of the qualified opp moved to next month + the count of the qualified opps that are lost in the current month</description>
    <formula>IF(Monthly_Opportunity_Close_Rate__c &gt; 0, Monthly_opp_won__c/ Monthly_Opportunity_Close_Rate__c ,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Monthly funnel opportunities</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>