force-app/main/default/objects/Sales_Rep_Profile__c/fields/Monthly_Lead_Added_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Lead_Added_Percentage__c</fullName>
    <formula>IF(Goal_of_monthly_leads_to_achieve_quota__c &gt; 0, Monthly_Lead_Added__c/ Goal_of_monthly_leads_to_achieve_quota__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Monthly Lead Added Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>