force-app/main/default/objects/Sales_Rep_Profile__c/fields/Monthly_Lead_to_Opp_Conversion_Rate__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Lead_to_Opp_Conversion_Rate__c</fullName>
    <formula>IF(Monthly_Lead_Added__c &gt; 0 ,Monthly_QO_added_Quantitative__c / Monthly_Lead_Added__c,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Monthly Lead to Opp Conversion Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>