force-app/main/default/objects/Sales_Rep_Profile__c/fields/Monthly_Opp_added_to_Qualif_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Opp_added_to_Qualif_Percentage__c</fullName>
    <formula>IF(Goal_of_monthly_opptys_added_to_funnel__c &gt; 0, Monthly_QO_added_Quantitative__c  /  Goal_of_monthly_opptys_added_to_funnel__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Monthly  Opp added to Qualif Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>